exclude fuzzy to have full translation
Signed-off-by: SergeySlice <sergey.slice@gmail.com>

--- a/CloverPackage/package/po/hr.po
+++ b/CloverPackage/package/po/hr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Clover 2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-20 21:37+0300\n"
+"POT-Creation-Date: 2020-11-22 13:02+0300\n"
 "PO-Revision-Date: 2018-10-02 11:39+0200\n"
 "Last-Translator: vector sigma\n"
 "Language-Team: hr <hr@li.org>\n"
@@ -315,10 +315,10 @@ msgstr "Instaliraj boot0af u MBR"
 #| "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
 #| "This choice will setup selected HFS/Fat32 partition to be active."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on GPT partition.\n"
 "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
-"This choice will setup selected HFS/Fat32 partition to be active. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"This choice will setup selected HFS/Fat32 partition to be active.\n"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "Koristi se za BIOS pokretanje na BIOS matičnim pločama. \n"
 "boot0af (boot0 Active First) pokretač pokušava pokrenuti prvu aktivnu particiju definiranu u  MBR. Ako aktivna particija ne postoji, tada pokušava pokrenuti EFI/FAT32/HFS particiju (određenu u MBR potom GPT) sa valjanim PBR potpisom.\n"
@@ -339,11 +339,11 @@ msgstr "Instalira boot0ss u MBR"
 #| "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 #| "This choice will not activate any partition in MBR."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on MBR partition.\n"
 "boot0ss (boot0 Signature Scanning) bootloader try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature. If no partition is found it will try to boot the active partition defined in MBR.\n"
 "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 "This choice will not activate any partition in MBR. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "Koristi se za BIOS pokretanje na BIOS matičnim pločama. \n"
 "boot0ss (boot0 Traženje potpisa) pokretač pokušava pokrenuti EFI/FAT32/HFS particiju a valjanim PBR potpisom. Ako potpis ne postoji tada će pokušati pokrenuti prvu aktivnu particiju definiranu na MBR. \n"
