--- a/CloverPackage/package/po/id.po
+++ b/CloverPackage/package/po/id.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Clover 2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-20 21:37+0300\n"
+"POT-Creation-Date: 2020-11-22 13:02+0300\n"
 "PO-Revision-Date: 2019-07-20 10:15+0700\n"
 "Last-Translator: Badruzeus\n"
 "Language-Team: id <id@li.org>\n"
@@ -314,10 +314,10 @@ msgstr "Install boot0af di MBR"
 #| "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
 #| "This choice will setup selected HFS/Fat32 partition to be active."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on GPT partition.\n"
 "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
-"This choice will setup selected HFS/Fat32 partition to be active. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"This choice will setup selected HFS/Fat32 partition to be active.\n"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "Untuk BIOS-booting pada BIOS motherboard (Legacy).\n"
 "boot0af (boot0 Active First) mencoba boot partisi aktif di MBR.\n"
@@ -340,11 +340,11 @@ msgstr "Install boot0ss di MBR"
 #| "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 #| "This choice will not activate any partition in MBR."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on MBR partition.\n"
 "boot0ss (boot0 Signature Scanning) bootloader try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature. If no partition is found it will try to boot the active partition defined in MBR.\n"
 "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 "This choice will not activate any partition in MBR. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "Untuk BIOS-booting pada BIOS motherboard (Legacy).\n"
 "boot0ss (boot0 Signature Scanning) mencoba boot partisi pertama\n"
