--- a/CloverPackage/package/po/nl.po
+++ b/CloverPackage/package/po/nl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-20 21:37+0300\n"
+"POT-Creation-Date: 2020-11-22 13:02+0300\n"
 "PO-Revision-Date: 2019-07-14 12:37+0200\n"
 "Last-Translator: vector sigma\n"
 "Language-Team: \n"
@@ -317,10 +317,10 @@ msgstr "Installeer boot0af in MBR"
 #| "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
 #| "This choice will setup selected HFS/Fat32 partition to be active."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on GPT partition.\n"
 "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
-"This choice will setup selected HFS/Fat32 partition to be active. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"This choice will setup selected HFS/Fat32 partition to be active.\n"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "Gebruikt voor BIOS opstarten op BIOS moederborden.\n"
 "boot0af (boot0 Active First) opstartlader proberen om de gedefinieerd actieve partitie in MBR op te starten. Bij geen actieve partitie, zal het proberen om de eerste EFI/FAT32/HFS partitie op te starten (gedefinieerd in de MBR en daarna vervolgens in GPT) met een geldige PBR handtekening.\n"
@@ -341,11 +341,11 @@ msgstr "Installeer boot0ss in MBR"
 #| "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 #| "This choice will not activate any partition in MBR."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on MBR partition.\n"
 "boot0ss (boot0 Signature Scanning) bootloader try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature. If no partition is found it will try to boot the active partition defined in MBR.\n"
 "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 "This choice will not activate any partition in MBR. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "Gebruikt voor BIOS opstarten op BIOS moederborden.\n"
 "boot0ss (boot0 Signature Scanning) opstartlader zal proberen de eerst EFI/FAT32/HFS partitie op te starten (gedefinieerd in de MBR en daarna de GPT) met een geldige PBR handtekening. Als er geen partitie is gevonden zal het proberen de eerst actieve partitie gedefinieerd in MBR op te starten.\n"
