--- a/CloverPackage/package/po/zh_CN.po
+++ b/CloverPackage/package/po/zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Clover 2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-20 21:37+0300\n"
+"POT-Creation-Date: 2020-11-22 13:02+0300\n"
 "PO-Revision-Date: 2019-08-09 19:03-0400\n"
 "Last-Translator: vector sigma\n"
 "Language-Team: zh_CN <zh_CN@li.org>\n"
@@ -305,10 +305,10 @@ msgstr "安装 boot0af 进 MBR"
 #| "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
 #| "This choice will setup selected HFS/Fat32 partition to be active."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on GPT partition.\n"
 "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
-"This choice will setup selected HFS/Fat32 partition to be active. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"This choice will setup selected HFS/Fat32 partition to be active.\n"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "BIOS 主板 之 BIOS 启动 专用。\n"
 "boot0af (优先激活 boot0) 优先引导 MBR 的 激活分区, 如果没有激活分区, 将引导第一个含 有效 PBR 签名 的 EFI/FAT32/HFS 分区 (优先引导MBR，其次引导GPT)。\n"
@@ -329,11 +329,11 @@ msgstr "安装 boot0ss 进 MBR"
 #| "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 #| "This choice will not activate any partition in MBR."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on MBR partition.\n"
 "boot0ss (boot0 Signature Scanning) bootloader try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature. If no partition is found it will try to boot the active partition defined in MBR.\n"
 "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 "This choice will not activate any partition in MBR. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "BIOS 主板 之 BIOS 启动 专用。\n"
 "boot0ss (boot0 签名扫描) 引导器 优先引导第一个含 有效 PBR 签名 的 EFI/FAT32/HFS 分区(优先引导MBR, 其次引导GPT), 如果没有找到分区，将引导 MBR 的 激活分区。\n"
