--- a/CloverPackage/package/Resources/templates/Localizable.strings
+++ b/CloverPackage/package/Resources/templates/Localizable.strings
@@ -33,17 +33,17 @@ boot1 (On the partition's boot-sector) to finding boot2.
 boot2 (On the partition's root directory) for loading /EFI/CLOVER/CLOVERIA32.efi or CLOVERX64.efi, and kernel etc.";
 
 "boot0af_title" = "Install boot0af in MBR";
-"boot0af_description" = "Used for BIOS booting on BIOS motherboards.
+"boot0af_description" = "Used for BIOS booting on GPT partition.
 boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.
-This choice will setup selected HFS/Fat32 partition to be active. 
-WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem";
+This choice will setup selected HFS/Fat32 partition to be active.
+WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem.";
 
 "boot0ss_title" = "Install boot0ss in MBR";
-"boot0ss_description" = "Used for BIOS booting on BIOS motherboards.
+"boot0ss_description" = "Used for BIOS booting on MBR partition.
 boot0ss (boot0 Signature Scanning) bootloader try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature. If no partition is found it will try to boot the active partition defined in MBR.
 This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.
 This choice will not activate any partition in MBR. 
-WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem";
+WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem.";
 
 "bootNo_title" = "Don't update MBR and PBR sectors";
 "bootNo_description" = "Don't install any bootloader (boot0X, boot1X).
