--- a/CloverPackage/package/po/clover.pot
+++ b/CloverPackage/package/po/clover.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Clover r5126\n"
-"POT-Creation-Date: 2020-11-20 21:37+0300\n"
+"POT-Creation-Date: 2020-11-22 13:02+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -282,16 +282,16 @@ msgstr ""
 #: Resources/templates/Localizable.strings:36
 #, no-wrap
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on GPT partition.\n"
 "boot0af (boot0 Active First) bootloader try to boot the active partition "
 "defined in MBR. If there is no active partition, it will try to boot the "
 "first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a "
 "valid PBR signature.\n"
-"This choice will setup selected HFS/Fat32 partition to be active. \n"
+"This choice will setup selected HFS/Fat32 partition to be active.\n"
 "WARNING On macOS Catalina and macOS Big Sur the system is a read-only file "
 "system, you cannot use this option without selecting the ESP option "
 "otherwise the installation will fail, for any older system there is no "
-"problem"
+"problem."
 msgstr ""
 
 #. type: "boot0ss_title"
@@ -304,7 +304,7 @@ msgstr ""
 #: Resources/templates/Localizable.strings:42
 #, no-wrap
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on MBR partition.\n"
 "boot0ss (boot0 Signature Scanning) bootloader try to boot the first "
 "EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid "
 "PBR signature. If no partition is found it will try to boot the active "
@@ -315,7 +315,7 @@ msgid ""
 "WARNING On macOS Catalina and macOS Big Sur the system is a read-only file "
 "system, you cannot use this option without selecting the ESP option "
 "otherwise the installation will fail, for any older system there is no "
-"problem"
+"problem."
 msgstr ""
 
 #. type: "bootNo_title"
