--- a/CloverPackage/package/po/es.po
+++ b/CloverPackage/package/po/es.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Clover 2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-20 21:37+0300\n"
+"POT-Creation-Date: 2020-11-22 13:02+0300\n"
 "PO-Revision-Date: 2018-10-02 11:38+0200\n"
 "Last-Translator: vector sigma\n"
 "Language-Team: es <es@li.org>\n"
@@ -318,10 +318,10 @@ msgstr "Instalar boot0af en el MBR"
 #| "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
 #| "This choice will setup selected HFS/Fat32 partition to be active."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on GPT partition.\n"
 "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
-"This choice will setup selected HFS/Fat32 partition to be active. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"This choice will setup selected HFS/Fat32 partition to be active.\n"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "Usado para arranque BIOS en placas base con BIOS.\n"
 "boot0af (boot0 Active First - Activa Primero) intenta arrancar la partición activa definida en el MBR. Si no hay una partición activa, intentará arrancar la primer partición EFI/FAT32/HFS (definida en el MBR y luego en el GPT) con una firma PBR válida.\n"
@@ -342,11 +342,11 @@ msgstr "Instalar boot0ss en el MBR"
 #| "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 #| "This choice will not activate any partition in MBR."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on MBR partition.\n"
 "boot0ss (boot0 Signature Scanning) bootloader try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature. If no partition is found it will try to boot the active partition defined in MBR.\n"
 "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 "This choice will not activate any partition in MBR. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "Usado para arranque BIOS en placas base con BIOS.\n"
 "boot0ss (boot0 Signature Scanning - Escaneo de Firma) intenta arrancar la primer partición EFI/FAT32/HFS (definida en el MBR y luego en el GPT) con una firma PBR válida. Si no encuentra ninguna partición intentará arrancar la partición activa definida en el MBR.\n"
