--- a/CloverPackage/package/po/fr.po
+++ b/CloverPackage/package/po/fr.po
@@ -4,9 +4,9 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
-"Project-Id-Version: Clover 2.0\n"
+"Project-Id-Version: Clover 5.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-20 21:37+0300\n"
+"POT-Creation-Date: 2020-11-22 13:02+0300\n"
 "PO-Revision-Date: \n"
 "Last-Translator: vector sigma\n"
 "Language-Team: en <en@li.org>\n"
@@ -324,16 +324,12 @@ msgstr "Installe boot0af dans le MBR"
 
 #. type: "boot0af_description"
 #: Resources/templates/Localizable.strings:36
-#, fuzzy, no-wrap
-#| msgid ""
-#| "Used for BIOS booting on BIOS motherboards.\n"
-#| "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
-#| "This choice will setup selected HFS/Fat32 partition to be active. WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
+#, no-wrap
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on GPT partition.\n"
 "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
-"This choice will setup selected HFS/Fat32 partition to be active. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"This choice will setup selected HFS/Fat32 partition to be active.\n"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "Nécessaire pour démarrer depuis le BIOS des anciennes cartes-mère (Legacy).\n"
 "boot0af (boot0 Active First) Clover essaie de démarrer la partition active définie dans le MBR. S’il n’y a pas de partition active, il va essayé de démarrer la première partition EFI/FAT32/HFS (définie dans le MBR puis dans la GPT) ayant une signature PBR valide.\n"
@@ -347,18 +343,13 @@ msgstr "Installe boot0ss dans le MBR"
 
 #. type: "boot0ss_description"
 #: Resources/templates/Localizable.strings:42
-#, fuzzy, no-wrap
-#| msgid ""
-#| "Used for BIOS booting on BIOS motherboards.\n"
-#| "boot0ss (boot0 Signature Scanning) bootloader try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature. If no partition is found it will try to boot the active partition defined in MBR.\n"
-#| "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
-#| "This choice will not activate any partition in MBR. WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
+#, no-wrap
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on MBR partition.\n"
 "boot0ss (boot0 Signature Scanning) bootloader try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature. If no partition is found it will try to boot the active partition defined in MBR.\n"
 "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 "This choice will not activate any partition in MBR. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "Nécessaire pour démarrer depuis le BIOS des anciennes cartes-mère (Legacy).\n"
 "boot0ss (boot0 Signature Scanning) Clover va d’abord essayé de démarrer la première partition EFI/FAT32/HFS (définie dans le MBR puis dans la GPT) ayant une signature PBR valide. Si aucune partition n’a été trouvée, il va essayé de démarrer la partition active définie dans le MBR.\n"
@@ -598,8 +589,7 @@ msgstr "Pilote pour corriger les problèmes d’entrée des Firmware UEFI tels q
 #. type: "AptioMemoryFix.UEFI_description"
 #: Resources/templates/Localizable.strings:103
 #: Resources/templates/Localizable.strings:145
-#, fuzzy, no-wrap
-#| msgid "Old 64bit driver to fix Memory problems on UEFI firmware such as AMI Aptio"
+#, no-wrap
 msgid "Obsolete 64bit driver to fix Memory problems on UEFI firmware such as AMI Aptio"
 msgstr "Ancien pilote 64 bit pour résoudre les problèmes de mémoire avec certains firmwares UEFI tels que AMI Aptio."
 
@@ -1014,11 +1004,7 @@ msgstr "Gestionnaire de thèmes pour Clover"
 
 #. type: "CloverThemeManager_description"
 #: Resources/templates/Localizable.strings:211
-#, fuzzy, no-wrap
-#| msgid ""
-#| "CloverThemeManager.app by blackosx,\n"
-#| "keeps your Themes up to date, remove or install them by choosing from a wide selection.\n"
-#| "Install to /Applications"
+#, no-wrap
 msgid ""
 "CloverThemeManager.app by blackosx,\n"
 "//keeps your Themes up to date, remove or install them by choosing from a wide selection.\n"
