--- a/CloverPackage/package/po/tr.po
+++ b/CloverPackage/package/po/tr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-20 21:37+0300\n"
+"POT-Creation-Date: 2020-11-22 13:02+0300\n"
 "PO-Revision-Date: 2018-10-02 11:46+0200\n"
 "Last-Translator: vector sigma\n"
 "Language-Team: \n"
@@ -315,10 +315,10 @@ msgstr "boot0af'yi MBR'ye yükle"
 #| "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
 #| "This choice will setup selected HFS/Fat32 partition to be active."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on GPT partition.\n"
 "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
-"This choice will setup selected HFS/Fat32 partition to be active. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"This choice will setup selected HFS/Fat32 partition to be active.\n"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "BIOS anakartlarda BIOS önyükleme için kullanılır.\n"
 "boot0af (boot0 Active First/Aktif Öncelikli) önyükleyici tanımlanan MBR'deki aktif bölümden önyükleme yapmaya çalışır. Eğer aktif bölüm yoksa, geçerli bir PBR imzasına sahip ilk EFI/FAT32/HFS bölümünü (MBR'de  ve sonra da GPT'de tanımlanan) önyüklemeye çalışacaktır.\n"
@@ -339,11 +339,11 @@ msgstr "boot0ss'yi MBR'ye yükle"
 #| "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 #| "This choice will not activate any partition in MBR."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on MBR partition.\n"
 "boot0ss (boot0 Signature Scanning) bootloader try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature. If no partition is found it will try to boot the active partition defined in MBR.\n"
 "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 "This choice will not activate any partition in MBR. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "BIOS anakartlarda BIOS önyükleme için kullanılır.\n"
 "boot0ss (boot0 Signature Scanning/İmza Tarama) önyükleyici geçerli bir PBR imzasına sahip ilk EFI/FAT32/HFS bölümünü (MBR'de ve sonra da GPT'de tanımlanan) önyüklemeye çalışacaktır. Eğer bölüm bulunamazsa MBR'de tanımlanan aktif bölümü önyüklemeye çalışacaktır.\n"
