--- a/CloverPackage/package/po/zh_TW.po
+++ b/CloverPackage/package/po/zh_TW.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Clover 2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-20 21:37+0300\n"
+"POT-Creation-Date: 2020-11-22 13:02+0300\n"
 "PO-Revision-Date: 2018-10-02 11:48+0200\n"
 "Last-Translator: vector sigma\n"
 "Language-Team: zh_TW <zh_TW@li.org>\n"
@@ -304,10 +304,10 @@ msgstr "BIOS 安裝 boot0af (HFS+Fat32)"
 #| "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
 #| "This choice will setup selected HFS/Fat32 partition to be active."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on GPT partition.\n"
 "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
-"This choice will setup selected HFS/Fat32 partition to be active. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"This choice will setup selected HFS/Fat32 partition to be active.\n"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "BIOS 主機板 之 BIOS 啓動 專用。\n"
 "使用 fdisk440 將 boot0af 寫入 MBR 的前 440 位元，避免損壞已經存在的 Windows 機碼，boot0af 優先引導 MBR 的 啓動分割區，如果沒有啓動分割區，將引導第一個 EFI/FAT32/HFS 的 boot1 分區(優先引導MBR，其次引導GPT)。\n"
@@ -334,11 +334,11 @@ msgstr "BIOS 安裝 boot0ss (HFS+Fat32)"
 #| "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 #| "This choice will not activate any partition in MBR."
 msgid ""
-"Used for BIOS booting on BIOS motherboards.\n"
+"Used for BIOS booting on MBR partition.\n"
 "boot0ss (boot0 Signature Scanning) bootloader try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature. If no partition is found it will try to boot the active partition defined in MBR.\n"
 "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
 "This choice will not activate any partition in MBR. \n"
-"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem"
+"WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "BIOS 主機板 之 BIOS 啓動 專用。\n"
 "使用 fdisk440 將 boot0ss 寫入 MBR 的前 440 位元，避免損壞已經存在的 Windows 機碼，boot0ss 優先引導第一個 EFI/FAT32/HFS 的方割區的 boot1 分區(優先引導MBR，其次引導GPT)，如果沒有找到 boot1 分割區，將引導 MBR 的 啓動分割區。\n"
