--- a/CloverPackage/package/po/clover.pot
+++ b/CloverPackage/package/po/clover.pot
@@ -6,8 +6,8 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Clover r5134\n"
-"POT-Creation-Date: 2021-05-11 20:53+0300\n"
+"Project-Id-Version: Clover r5135\n"
+"POT-Creation-Date: 2021-05-15 18:25+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -946,11 +946,12 @@ msgid ""
 "BootLoaderChooser by jief,\n"
 "This tool is a menu that allows you to choose which bootloader you want to "
 "load.\n"
-"Will replace your BOOX64.efi, you can choose between Clover and OpenCore.\n"
+"Will replace your BOOTX64.efi, you can choose between several bootloader "
+"versions.\n"
 "The first time, you'll get the menu. Choose one bootloader.\n"
 "The next times, it'll immediately load the bootloader you chose before.\n"
 "When you need the menu back, just boot your computer with a key pressed.\n"
-"INSTALL ONLY IF YOU KNOW WHAT ARE YOU DOING !!!\n"
+"INSTALL ONLY IF YOU KNOW WHAT YOU ARE DOING !!!\n"
 "More infos https://github.com/jief666/BootloaderChooser. "
 msgstr ""
 
