--- a/CloverPackage/package/po/uk_UA.po
+++ b/CloverPackage/package/po/uk_UA.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Clover 2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-11 20:53+0300\n"
+"POT-Creation-Date: 2021-05-15 18:25+0300\n"
 "PO-Revision-Date: 2018-10-02 11:47+0200\n"
 "Last-Translator: vector sigma\n"
 "Language-Team: ua <ua@li.org>\n"
@@ -1046,11 +1046,11 @@ msgstr "Завантажувач"
 msgid ""
 "BootLoaderChooser by jief,\n"
 "This tool is a menu that allows you to choose which bootloader you want to load.\n"
-"Will replace your BOOX64.efi, you can choose between Clover and OpenCore.\n"
+"Will replace your BOOTX64.efi, you can choose between several bootloader versions.\n"
 "The first time, you'll get the menu. Choose one bootloader.\n"
 "The next times, it'll immediately load the bootloader you chose before.\n"
 "When you need the menu back, just boot your computer with a key pressed.\n"
-"INSTALL ONLY IF YOU KNOW WHAT ARE YOU DOING !!!\n"
+"INSTALL ONLY IF YOU KNOW WHAT YOU ARE DOING !!!\n"
 "More infos https://github.com/jief666/BootloaderChooser. "
 msgstr ""
 
