--- a/CloverPackage/package/po/es.po
+++ b/CloverPackage/package/po/es.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Clover 2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-15 18:25+0300\n"
+"POT-Creation-Date: 2023-07-03 19:51+0300\n"
 "PO-Revision-Date: 2018-10-02 11:38+0200\n"
 "Last-Translator: vector sigma\n"
 "Language-Team: es <es@li.org>\n"
@@ -1055,8 +1055,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "CloverConfigPlistValidator by jief,\n"
-"Verify sanity of your config.plist keeps it clean and up to date.\n"
-"Installs to /usr/local/bin and will be available as 'ccpv' "
+"//Verify sanity of your config.plist keeps it clean and up to date.\n"
+"//Installs to /usr/local/bin and will be available as 'ccpv' "
 msgstr ""
 
 #. type: "rc.scripts.on.target_title"
