--- a/CloverPackage/package/po/hr.po
+++ b/CloverPackage/package/po/hr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Clover 2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-15 18:25+0300\n"
+"POT-Creation-Date: 2023-07-03 19:51+0300\n"
 "PO-Revision-Date: 2018-10-02 11:39+0200\n"
 "Last-Translator: vector sigma\n"
 "Language-Team: hr <hr@li.org>\n"
@@ -14,8 +14,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Poedit 2.1.1\n"
 "X-POOTLE-MTIME: 1392363438.0\n"
 
@@ -1051,8 +1051,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "CloverConfigPlistValidator by jief,\n"
-"Verify sanity of your config.plist keeps it clean and up to date.\n"
-"Installs to /usr/local/bin and will be available as 'ccpv' "
+"//Verify sanity of your config.plist keeps it clean and up to date.\n"
+"//Installs to /usr/local/bin and will be available as 'ccpv' "
 msgstr ""
 
 #. type: "rc.scripts.on.target_title"
