--- a/CloverPackage/package/po/ru.po
+++ b/CloverPackage/package/po/ru.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Clover 5.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-15 18:25+0300\n"
+"POT-Creation-Date: 2023-07-03 19:51+0300\n"
 "PO-Revision-Date: \n"
 "Last-Translator: vector sigma\n"
 "Language-Team: ru <ru@li.org>\n"
@@ -16,8 +16,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "PO-Creation-Date: 2014-02-13 15:47+0000\n"
 "POT-Revision-Date: 2018-07-02 12:00+0500\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Poedit 2.1.1\n"
 "X-POOTLE-MTIME: 1392306466.0\n"
 
@@ -1037,8 +1037,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "CloverConfigPlistValidator by jief,\n"
-"Verify sanity of your config.plist keeps it clean and up to date.\n"
-"Installs to /usr/local/bin and will be available as 'ccpv' "
+"//Verify sanity of your config.plist keeps it clean and up to date.\n"
+"//Installs to /usr/local/bin and will be available as 'ccpv' "
 msgstr ""
 
 #. type: "rc.scripts.on.target_title"
