--- a/CloverPackage/package/po/ru.po
+++ b/CloverPackage/package/po/ru.po
@@ -846,7 +846,7 @@ msgstr "Драйвер для мыши USB."
 msgid "ext2/3 filesystem driver from virtualbox, 64bit"
 msgstr "Поддержка файловых систем EXT2 и EXT3 (Linux)."
 
-#. type: "VBoxExt4.UEFI_description"
+#. type: "Ext4Dxe.UEFI_description"
 #: Resources/templates/Localizable.strings:172
 #, no-wrap
 msgid "ext4 filesystem driver from virtualbox, 64bit"
@@ -1496,7 +1496,7 @@ msgstr "Неизвестно"
 #~ msgid "ext2/3 filesystem driver from virtualbox, 32bit"
 #~ msgstr "Драйвер файловой системы EXT2/3 (Linux), 32 бита."
 
-#~ msgid "ext4 filesystem driver from virtualbox, 32bit"
+#~ msgid "ext4 filesystem driver from tianocore, 32bit"
 #~ msgstr "Драйвер файловой системы EXT4 (Linux), 32 бита."
 
 #~ msgid "USB 3.0 driver, 32bit"
