--- a/CloverPackage/package/po/de.po
+++ b/CloverPackage/package/po/de.po
@@ -850,11 +850,11 @@ msgstr "Treiber für USB Maus, 64bit"
 msgid "ext2/3 filesystem driver from virtualbox, 64bit"
 msgstr "Treiber für das ext2/3 Dateisystem aus VirtualBox, 64bit"
 
-#. type: "VBoxExt4.UEFI_description"
+#. type: "Ext4Dxe.UEFI_description"
 #: Resources/templates/Localizable.strings:172
 #, no-wrap
-msgid "ext4 filesystem driver from virtualbox, 64bit"
-msgstr "Treiber für das ext4 Dateisystem aus VirtualBox, 64bit"
+msgid "ext4 filesystem driver from tianocore, 64bit"
+msgstr "Treiber für das ext4 Dateisystem aus tianocore, 64bit"
 
 #. type: "VBoxHfs.UEFI_description"
 #: Resources/templates/Localizable.strings:173
@@ -1494,8 +1494,8 @@ msgstr "Unbekannt"
 #~ msgid "ext2/3 filesystem driver from virtualbox, 32bit"
 #~ msgstr "Treiber für das ext2/3 Dateisystem aus VirtualBox, 32bit"
 
-#~ msgid "ext4 filesystem driver from virtualbox, 32bit"
-#~ msgstr "Treiber für das ext4 Dateisystem aus VirtualBox, 32bit"
+#~ msgid "ext4 filesystem driver from tianocore, 32bit"
+#~ msgstr "Treiber für das ext4 Dateisystem aus tianocore, 32bit"
 
 #~ msgid "USB 3.0 driver, 32bit"
 #~ msgstr "Treiber für USB 3.0, 32bit"
