--- a/CloverPackage/package/po/en.po
+++ b/CloverPackage/package/po/en.po
@@ -847,11 +847,11 @@ msgstr "USB mouse driver, 64 bit."
 msgid "ext2/3 filesystem driver from virtualbox, 64bit"
 msgstr "EXT2/3 filesystem driver from VirtualBox, 64 bit."
 
-#. type: "VBoxExt4.UEFI_description"
+#. type: "Ext4Dxe.UEFI_description"
 #: Resources/templates/Localizable.strings:172
 #, no-wrap
-msgid "ext4 filesystem driver from virtualbox, 64bit"
-msgstr "EXT4 filesystem driver from VirtualBox, 64 bit."
+msgid "ext4 filesystem driver from tianocore, 64bit"
+msgstr "EXT4 filesystem driver from tianocore, 64 bit."
 
 #. type: "VBoxHfs.UEFI_description"
 #: Resources/templates/Localizable.strings:173
@@ -1494,8 +1494,8 @@ msgstr "Unknown"
 #~ msgid "ext2/3 filesystem driver from virtualbox, 32bit"
 #~ msgstr "EXT2/3 filesystem driver from VirtualBox, 32 bit."
 
-#~ msgid "ext4 filesystem driver from virtualbox, 32bit"
-#~ msgstr "EXT4 filesystem driver from VirtualBox, 32 bit."
+#~ msgid "ext4 filesystem driver from tianocore, 32bit"
+#~ msgstr "EXT4 filesystem driver from tianocore, 32 bit."
 
 #~ msgid "USB 3.0 driver, 32bit"
 #~ msgstr "USB 3.0 driver, 32 bit."
