--- a/CloverPackage/package/po/es.po
+++ b/CloverPackage/package/po/es.po
@@ -847,11 +847,11 @@ msgstr "Controlador para ratones USB, 64bit"
 msgid "ext2/3 filesystem driver from virtualbox, 64bit"
 msgstr "Controlador para sistema de archivos ext2/3 de VirtualBox, 64bit"
 
-#. type: "VBoxExt4.UEFI_description"
+#. type: "Ext4Dxe.UEFI_description"
 #: Resources/templates/Localizable.strings:172
 #, no-wrap
-msgid "ext4 filesystem driver from virtualbox, 64bit"
-msgstr "Controlador para sistema de archivos ext4 de VirtualBox, 64bit"
+msgid "ext4 filesystem driver from tianocore, 64bit"
+msgstr "Controlador para sistema de archivos ext4 de tianocore, 64bit"
 
 #. type: "VBoxHfs.UEFI_description"
 #: Resources/templates/Localizable.strings:173
@@ -1509,8 +1509,8 @@ msgstr "Desconocido"
 #~ msgid "ext2/3 filesystem driver from virtualbox, 32bit"
 #~ msgstr "Controlador para sistema de archivos ext2/3 de VirtualBox, 32bit"
 
-#~ msgid "ext4 filesystem driver from virtualbox, 32bit"
-#~ msgstr "Controlador para sistema de archivos ext4 de VirtualBox, 32bit"
+#~ msgid "ext4 filesystem driver from tianocore, 32bit"
+#~ msgstr "Controlador para sistema de archivos ext4 de tianocore, 32bit"
 
 #~ msgid "USB 3.0 driver, 32bit"
 #~ msgstr "Controlador USB 3.0, 32bit"
