--- a/CloverPackage/package/po/fr.po
+++ b/CloverPackage/package/po/fr.po
@@ -854,10 +854,10 @@ msgstr "Pilote 64 bit pour souris USB."
 msgid "ext2/3 filesystem driver from virtualbox, 64bit"
 msgstr "Pilote 64 bit pour lire les partitions formatées en ext2/3."
 
-#. type: "VBoxExt4.UEFI_description"
+#. type: "Ext4Dxe.UEFI_description"
 #: Resources/templates/Localizable.strings:172
 #, no-wrap
-msgid "ext4 filesystem driver from virtualbox, 64bit"
+msgid "ext4 filesystem driver from tianocore, 64bit"
 msgstr "Pilote 64 bit pour lire les partitions formatées en ext4."
 
 #. type: "VBoxHfs.UEFI_description"
@@ -1499,8 +1499,8 @@ msgstr "Inconnu"
 #~ msgid "ext2/3 filesystem driver from virtualbox, 32bit"
 #~ msgstr "EXT2/3 filesystem driver from VirtualBox, 32 bit."
 
-#~ msgid "ext4 filesystem driver from virtualbox, 32bit"
-#~ msgstr "EXT4 filesystem driver from VirtualBox, 32 bit."
+#~ msgid "ext4 filesystem driver from tianocore, 32bit"
+#~ msgstr "EXT4 filesystem driver from tianocore, 32 bit."
 
 #~ msgid "USB 3.0 driver, 32bit"
 #~ msgstr "USB 3.0 driver, 32 bit."
