--- a/CloverPackage/package/po/it.po
+++ b/CloverPackage/package/po/it.po
@@ -849,7 +849,7 @@ msgstr "Driver a 64 bit per mouse USB"
 msgid "ext2/3 filesystem driver from virtualbox, 64bit"
 msgstr "Driver a 64 bit per accedere a partizioni formattate in ext2/3"
 
-#. type: "VBoxExt4.UEFI_description"
+#. type: "Ext4Dxe.UEFI_description"
 #: Resources/templates/Localizable.strings:172
 #, no-wrap
 msgid "ext4 filesystem driver from virtualbox, 64bit"
@@ -1504,7 +1504,7 @@ msgstr "Sconosciuto"
 #~ msgid "ext2/3 filesystem driver from virtualbox, 32bit"
 #~ msgstr "Driver a 32 bit per accedere a partizioni formattate in ext2/3"
 
-#~ msgid "ext4 filesystem driver from virtualbox, 32bit"
+#~ msgid "ext4 filesystem driver from tianocore, 32bit"
 #~ msgstr "Driver a 32 bit per accedere a partizioni formattate in ext4"
 
 #~ msgid "USB 3.0 driver, 32bit"
