--- a/CloverPackage/package/po/ja.po
+++ b/CloverPackage/package/po/ja.po
@@ -842,7 +842,7 @@ msgstr "USBマウスドライバ -64bit"
 msgid "ext2/3 filesystem driver from virtualbox, 64bit"
 msgstr "virtual boxのext2/3ファイルシステムドライバ -64bit"
 
-#. type: "VBoxExt4.UEFI_description"
+#. type: "Ext4Dxe.UEFI_description"
 #: Resources/templates/Localizable.strings:172
 #, no-wrap
 msgid "ext4 filesystem driver from virtualbox, 64bit"
@@ -1501,7 +1501,7 @@ msgstr "不明"
 #~ msgid "ext2/3 filesystem driver from virtualbox, 32bit"
 #~ msgstr "virtual boxのext2/3ファイルシステムドライバ -32bit"
 
-#~ msgid "ext4 filesystem driver from virtualbox, 32bit"
+#~ msgid "ext4 filesystem driver from tianocore, 32bit"
 #~ msgstr "virtual boxのext4ファイルシステムドライバ -32bit"
 
 #~ msgid "USB 3.0 driver, 32bit"
