--- a/CloverPackage/package/po/vi.po
+++ b/CloverPackage/package/po/vi.po
@@ -851,7 +851,7 @@ msgstr "USB mouse driver, 64bit"
 msgid "ext2/3 filesystem driver from virtualbox, 64bit"
 msgstr "ext2/3 filesystem driver from virtual box, 64bit"
 
-#. type: "VBoxExt4.UEFI_description"
+#. type: "Ext4Dxe.UEFI_description"
 #: Resources/templates/Localizable.strings:172
 #, no-wrap
 msgid "ext4 filesystem driver from virtualbox, 64bit"
@@ -1511,7 +1511,7 @@ msgstr "Không xác định."
 #~ msgid "ext2/3 filesystem driver from virtualbox, 32bit"
 #~ msgstr "ext2/3 filesystem driver from virtual box, 32bit"
 
-#~ msgid "ext4 filesystem driver from virtualbox, 32bit"
+#~ msgid "ext4 filesystem driver from tianocore, 32bit"
 #~ msgstr "ext4 filesystem driver from virtual box, 32bit"
 
 #~ msgid "USB 3.0 driver, 32bit"
